# Poffer-Card-Game-CPP-Qt

./: README.md
final-version-server_sended_linux/update-server1/: HandName.h  Makefile  PofferServer  PofferServer.pro  card.cpp  deck.cpp  deck.h  handevaluator.cpp  main.cpp  moc_gamesession.cpp  moc_server.cpp  server.cpp  server.h  users.json
final-version-server_windows/final-version-server_sended/update-server1/: Makefile  Makefile.Debug  Makefile.Release  PofferServer.pro  PofferServer.pro.user.ffbf45e  card.h  deck.cpp  gamesession.cpp  gamesession.h  handevaluator.h  main.cpp  moc_gamesession.cpp
final-version-server_windows/final-version-server_sended/update-server1/release/: moc_gamesession.cpp  moc_predefs.h  moc_server.cpp
final-version_sended_linux/v3-withserver/: mainwindow.cpp  mainwindow.h  mainwindow.ui
final-version_windows/v3-withserver/: CMakeLists.txt  PofferClient.pro  mainwindow.cpp
